--- a/DataStructure/DataStructure.vcxproj.filters
+++ b/DataStructure/DataStructure.vcxproj.filters
@@ -42,5 +42,11 @@
     <ClCompile Include="RecursionTest.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="DualStackQueue.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Graph.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
