--- a/DataStructure/DataStructure.vcxproj
+++ b/DataStructure/DataStructure.vcxproj
@@ -138,7 +138,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AdjacencyList.cpp" />
+    <ClCompile Include="..\..\DataStructureTest\DataStructureTest\01_LinearTable1761300127.cpp" />
+    <ClCompile Include="AdjacencyList.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="BinaryTree.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
