--- a/DataStructure/DataStructure.vcxproj.filters
+++ b/DataStructure/DataStructure.vcxproj.filters
@@ -13,46 +13,55 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="源文件\DataStructureTest">
+      <UniqueIdentifier>{2c8868ac-f671-460e-93ac-2f15726b6f66}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\DataStructure">
+      <UniqueIdentifier>{880db226-b951-46b0-9d73-c46f685eed6a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DataStr.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="LinearTable.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="List.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="Stack.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="queue.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="Recursive.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="LinkQueue.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="LinkStack.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="RecursionTest.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="DualStackQueue.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="Graph.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="BinaryTree.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="..\..\DataStructureTest\DataStructureTest\01_LinearTable1761300127.cpp">
+      <Filter>源文件\DataStructureTest</Filter>
     </ClCompile>
     <ClCompile Include="AdjacencyList.cpp">
-      <Filter>源文件</Filter>
+      <Filter>源文件\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="BinaryTree.cpp">
+      <Filter>源文件\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="DataStr.cpp">
+      <Filter>源文件\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="DualStackQueue.cpp">
+      <Filter>源文件\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="Graph.cpp">
+      <Filter>源文件\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="LinearTable.cpp">
+      <Filter>源文件\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="LinkQueue.cpp">
+      <Filter>源文件\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="LinkStack.cpp">
+      <Filter>源文件\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="List.cpp">
+      <Filter>源文件\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="queue.cpp">
+      <Filter>源文件\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="RecursionTest.cpp">
+      <Filter>源文件\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="Recursive.cpp">
+      <Filter>源文件\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="Stack.cpp">
+      <Filter>源文件\DataStructure</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
