--- a/DataStructure/DataStructure.vcxproj.filters
+++ b/DataStructure/DataStructure.vcxproj.filters
@@ -75,5 +75,8 @@
     <ClCompile Include="04_queue1761300127(2).cpp">
       <Filter>源文件\DataStructureTest</Filter>
     </ClCompile>
+    <ClCompile Include="Test_kuohao.cpp">
+      <Filter>源文件\DataStructureTest</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
